--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ p.bar{
 
     ">
         <div style="margin-top:80px;">
-            <img style="display: inline-block;"class="ben" src="images/ben.jpg" title="Me" width="280px">
+            <img style="display: inline-block;"class="ben" src="/images/ben.jpg" title="Me" width="280px">
         </div>
 
         <div>
